[package]
name = "raumfahrer"
version = "0.0.1"
# authors = ["Jorge Aparicio <jorge@japaric.io>"]
# description = "A template for building applications for ARM Cortex-M microcontrollers"
# keywords = ["arm", "cortex-m", "template"]
# categories = ["embedded", "no-std"]
license = "MIT"
# repository = "https://github.com/japaric/cortex-m-quickstart"
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies.embedded-hal]
version = "0.1.2"

[dependencies.nrf52-hal]
path = "./nrf52-hal"
features = ["rt", "unproven"]

[dependencies.cortex-m]
version = "0.4.3"

[dependencies.cortex-m-rt]
version = "0.3.12"
features = ["abort-on-panic"]

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[dependencies.cortex-m-rtfm]
version = "0.3"

[dependencies.nb]
version = "0.1.1"
